--- a/css/styles.css
+++ b/css/styles.css
@@ -6,9 +6,64 @@ html, body {
 .left {
   float: left;
   display: inline-block;
-  background-color: lightgray;
   height: 100%;
   width: 30%;
+}
+.left .address-input-wrapper {
+  display: flex;
+  justify-content: space-between;
+  box-shadow: 0 1px 2px 1px rgba(0, 0, 0, 0.15), 0 2px 5px -3px rgba(0, 0, 0, 0.15);
+}
+.left .address-input-wrapper #address-input {
+  width: 80%;
+  height: 30px;
+  padding: 5px;
+  font-size: 17px;
+  border: 1px solid transparent;
+  transition: 0.3s;
+}
+.left .address-input-wrapper #address-input:focus {
+  border: 1px solid #ffdb4d;
+  outline: none;
+  box-shadow: none;
+}
+.left .address-input-wrapper #route {
+  width: 20%;
+  background-color: #ffdb4d;
+  border: none;
+  cursor: pointer;
+}
+.left .address-input-wrapper #route:focus {
+  outline: none;
+  box-shadow: none;
+}
+.left .list {
+  margin-top: 20px;
+  list-style: none;
+  padding: 10px;
+  font-family: sans-serif;
+}
+.left .list .geoObject {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 15px;
+}
+.left .list .geoObject .name {
+  margin: 0 0 5px;
+}
+.left .list .geoObject .delete {
+  background-color: #ffdb4d;
+  border: none;
+  cursor: pointer;
+}
+.left .list .geoObject .delete:focus {
+  outline: none;
+  box-shadow: none;
+}
+@media (max-width: 992px) {
+  .left {
+    width: 40%;
+  }
 }
 @media (max-width: 767px) {
   .left {
@@ -23,6 +78,11 @@ html, body {
   background-color: black;
   height: 100%;
   width: 70%;
+}
+@media (max-width: 992px) {
+  .right {
+    width: 60%;
+  }
 }
 @media (max-width: 767px) {
   .right {
